Dark Mode Fixes

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -105,94 +105,6 @@ a{
 
 //toggler design
  
-.navigation-button{
-    min-width: 40px;
-        .hamburger{
-            display: inline-block;
-            position: relative;
-        }
-    .hamburger .line{
-        font-size: 1rem;
-      width: 30px;
-      height: 2px;
-      //background-color: #06592c;
-      background-color: white;
-      box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.8);
-      display: block;
-      margin: 8px auto;
-      -webkit-transition: transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out;
-  
-        &.line2{
-            width: 25px;
-            margin: 8px auto 8px 0px;
-        }
-  
-        &.line3{
-            width: 20px;
-            margin: 8px auto 8px 0px;
-        }
-    }
-    
-    .hamburger:hover{
-      cursor: pointer;
-      &:hover{
-          transform: scale(1.1);
-      }
-    }
-  
-#hamburger{
-    position: relative;
-    -webkit-transition: transform 0.3s ease-in-out;
-    -o-transition: transform 0.3s ease-in-out;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  #hamburger.is-active{
-    transform: rotate(45deg);
-  }
-  
-  #hamburger:before{
-    content: "";
-    position: absolute;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 40px;
-    height: 40px;
-    border: 2px solid transparent;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 100%;
-    -webkit-transition: border 0.3s ease-in-out;
-    -o-transition: border 0.3s ease-in-out;
-    transition: border 0.3s ease-in-out;
-  }
-  
-  #hamburger.is-active:before{
-    //border: 2px solid #06592c;
-    border: 2px solid white;
-  }
-  
-  #hamburger.is-active .line{
-    width: 24px;
-  }
-  
-  #hamburger.is-active .line:nth-child(2){
-    opacity: 0;
-  }
-  
-  #hamburger.is-active .line:nth-child(1){
-    transform: translateY(11px);
-  }
-  
-  #hamburger.is-active .line:nth-child(3){
-    transform: translateY(-10px) rotate(90deg);
-  }
-}
-
 //toggler design ends
 .logo-wrapper{
    img{
@@ -236,63 +148,6 @@ a{
 
 .hiddenInitial{
     display: none;
-}
-.header-list-design{
-    position: relative;
-    .scroll-design-header{
-        position: absolute;
-        top: 50%;
-        height: 100%;
-        transform: translateY(-50%);
-        line-height: 38px;
-        width: 60px;
-        &.scroll-left{
-            left: 0px;
-            padding: 0px 20px 0px 5px;
-            background: rgba(#202020, 0.9);
-        }
-        &.scroll-right{
-            right: 0px;
-            padding: 0px 5px 0px 20px;
-            background: rgba(#202020, 0.9);
-        }
-    }
-
-
-
-    .header-list-design-inner{
-        display: flex;
-        flex-wrap: nowrap;
-        justify-content: start;
-        max-width: 100%;
-        overflow-x: auto;
-        overflow-y: hidden;
-        padding: 0px 10px;
-        position: relative;
-        &::-webkit-scrollbar{
-            display: none;
-        }
-
-   
-        &.has-hidden-elements-on-right{
-            padding-right: 60px;
-        }
-        &.has-hidden-elements-on-left{
-            padding-left: 60px;
-        }
-
-        .items {
-            margin: 5px 5px;
-            a{
-                background-color: #373737;
-                border: 1px solid #202020;
-                padding: 2px 10px;
-                display: inline-block;
-                border-radius: 15px;
-                @extend .font-size-xs
-            }
-        }
-    }
 }
 
 [data-scrolldir=down]{
@@ -355,37 +210,6 @@ body{
     }
 }
 
-.navbar-horizontal{
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 300px;
-    max-width: 100%;
-    background-color: #373737;
-    z-index: 999999;
-    padding: 50px 10px 60px 15px;
-    transform: translate3d(-350px, 0, 0);
-    transition: transform 0.3s ease-in;
-
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: space-between;
-    .list-design{
-        li{
-            margin: 5px 5px;
-            a{
-                padding: 5px 10px;
-                color: white;
-                @extend .font-size-md;
-         
-            }
-        }
-    }
-}
 
 .side-nav-visible{
     .navbar-horizontal{
